err/zicbee-lib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zicbee_lib'...
Listing './lib/python3.5/site-packages/zicbee_lib/commands'...
Compiling './lib/python3.5/site-packages/zicbee_lib/commands/__init__.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/commands/__init__.py", line 233
    print 'Unknwown command: "%s"'%name
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zicbee_lib/commands/command_get.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/commands/command_get.py", line 10
    print "No previous search, use shell to re-use previous result!"
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zicbee_lib/commands/command_misc.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/commands/command_misc.py", line 63
    print "Do a search first !"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zicbee_lib/core.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/core.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zicbee_lib/debug.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/debug.py", line 33
    print "Exception in stread, can't step into!"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zicbee_lib/parser.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/parser.py", line 473
    print "-"*80
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zicbee_lib/remote_apis.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/remote_apis.py", line 43
    print repr( ASArtist('Radiohead').getSimilar() )
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zicbee_lib/wasp'...
Compiling './lib/python3.5/site-packages/zicbee_lib/wasp/core.py'...
***   File "./lib/python3.5/site-packages/zicbee_lib/wasp/core.py", line 39
    print "Playing on http://%s songs from http://%s/db"%(config['player_host'][0], config['db_host'][0])
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zicbee_lib-0.7.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
